--- a/style.css
+++ b/style.css
@@ -2,12 +2,12 @@ body {
    display: flex;
    width: 100%;
    height: 100vh;
-
+   background-color: azure;
 }
 
-.deck {
-   height: 530px;
-   width: 530px;
+.grid {
+   height: 600px;
+   width: 600px;
    display: flex;
    flex-wrap: wrap;
    margin: auto;
@@ -15,7 +15,8 @@ body {
 }
 
 .card {
-   height: 120px;
-   width: 120px;
+   height: 136px;
+   width: 136px;
    border: 1px black solid;
+
 }
