--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
    display: flex;
    width: 100%;
    height: 100vh;
-   background-color: azure;
+   background-color: #000000;
 }
 
 .grid {
@@ -14,9 +14,25 @@ body {
    justify-content: space-between;
 }
 
+.back,
+.front,
 .card {
    height: 136px;
    width: 136px;
    border: 1px black solid;
+}
 
+.card {
+   position: relative;
+}
+
+.front,
+.back {
+   position: absolute;
+   border: 1px yellow solid;
+}
+
+.back {
+   z-index: 1;
+   background: #000000 url('Images/space-invaders.png');
 }
