--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
    flex-wrap: wrap;
    margin: auto;
    justify-content: space-between;
+   perspective: 600px;
 }
 
 .back,
@@ -20,20 +21,43 @@ body {
 .card {
    height: 136px;
    width: 136px;
-   border: 1px black solid;
 }
 
 .card {
    position: relative;
+   transition: transform 1s;
+   transform-style: preserve-3d;
+}
+
+.flip {
+   transform: rotateY(180deg);
 }
 
 .front,
 .back {
    position: absolute;
+   backface-visibility: hidden;
    border: 1px yellow solid;
 }
 
+.front {
+   transform: rotateY(180deg);
+   background-color: none;
+   background-size: contain;
+   background-repeat: no-repeat;
+   background-position: center center;
+}
+
 .back {
-   z-index: 1;
+   z-index: 2;
    background: #000000 url('Images/space-invaders.png');
 }
+
+.active {
+   transform: rotateY(180deg);
+}
+
+/* .match .front {
+background: #6589F9 !important;
+} */
+
