--- a/style.css
+++ b/style.css
@@ -4,6 +4,13 @@ body {
    height: 100vh;
    background-color: #000000;
    flex-direction: column;
+   color: #ffffff;
+}
+
+header{
+   display: flex;
+   flex-direction: column;
+   align-items: center;
 }
 
 .grid {
