--- a/style.css
+++ b/style.css
@@ -2,15 +2,23 @@ body {
    display: flex;
    width: 100%;
    height: 100vh;
-   background-color: #000000;
-   flex-direction: column;
-   color: #ffffff;
+   background-color: black;
+   background-image:
+   radial-gradient(white, rgba(255,255,255,.2) 2px, transparent 3px),
+   radial-gradient(white, rgba(255,255,255,.15) 1px, transparent 2px),
+   radial-gradient(white, rgba(255,255,255,.1) 2px, transparent 3px),
+   radial-gradient(rgba(255,255,255,.4), rgba(255,255,255,.1) 2px, transparent 4px);
+   background-size: 550px 550px, 350px 350px, 250px 250px, 150px 150px;
+   background-position: 0 0, 40px 60px, 130px 270px, 70px 100px;
+   flex-direction: row;
+   color: #fdec30;
+   align-items: center;
+   justify-content: center;
+   font-family: 'Open Sans', sans-serif;
 }
 
-header{
-   display: flex;
-   flex-direction: column;
-   align-items: center;
+h3 {
+   margin: 0;
 }
 
 .grid {
@@ -44,7 +52,7 @@ header{
 .back {
    position: absolute;
    backface-visibility: hidden;
-   border: 1px yellow solid;
+   border: 1px #fdec30 solid;
 }
 
 .front {
@@ -59,11 +67,21 @@ header{
    background: #000000 url('Images/space-invaders.png');
 }
 
-.disabled .back {
-   background: #000000 !important;
-   
+.disabled .front {
+   background: none !important;
+   border: none !important;
 }
 
+.controls {
+   margin-left: 5%;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+}
 
-
-
+.header {
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   margin-bottom: 50%;
+}
