Changed button text styling

--- a/button.css
+++ b/button.css
@@ -3,10 +3,10 @@
 	width:70px;
 	height:70px;
 	text-align:center;
-	color:#000000;
-	text-decoration:none;
+	color:#FFFFFF;
 	line-height:43px;
 	font-family:'Oswald', Helvetica;
+	font-weight: bold;
 	display: block;
 	margin: 30px;
 }
